--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
   <div id="container"></div>
 
+  <div id="temp">
+    
+
+  </div>
+
   <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
